Daily_Report/build_2026-04-20_run212-1_main.log
  File "/home/runner/work/Stock_Bot_2/Stock_Bot_2/Main.py", line 198
    f"----------------
    ^
SyntaxError: unterminated string literal (detected at line 198)
